hphp/hack/test/typecheck/hh_ignore1.php.exp
WARN: File "hh_ignore1.php", line 6, characters 3-47:
You cannot use `HH_FIXME` comments to suppress warnings. Use `HH_IGNORE[12009]` instead. (Warn[12009])
WARN: File "hh_ignore1.php", line 7, characters 3-11:
This `is` check is always `true`. The expression on the left has type `int` which is a subtype of `int`. (Warn[12009])
ERROR: File "hh_ignore1.php", line 8, characters 3-46:
You cannot use `HH_IGNORE` to suppress non-warning code 2050. Hack errors should not be suppressed. You should try your best to fix the code causing the error, or incidents will happen. (Naming[2050])
ERROR: File "hh_ignore1.php", line 9, characters 3-4:
Variable `$y` is undefined, or not always defined. (Naming[2050])
  File "hh_ignore1.php", line 3, characters 17-18:
  Did you mean `$x` instead?
